# warp-api-starter-template

./: .dockerignore  .env.sample  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  debug.Dockerfile  docker-compose.yml  release.Dockerfile
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: rust.yml
migrations/: v1__schema.sql
migrations/1970-01-01-000000_movine_init/: down.sql  up.sql
migrations/2020-07-06-120855_create_accounts_table/: down.sql  up.sql
migrations/2020-07-06-121519_create_sessions_table/: down.sql  up.sql
scripts/: run_dev.sh
src/: argon.rs  auth.rs  environment.rs  graphql.rs  jwt.rs  main.rs  model.rs  problem.rs  session.rs
src/environment/: mod.rs
src/graphql/: context.rs  mod.rs
src/graphql/mutation/: account.rs  mod.rs
src/graphql/query/: accounts.rs  mod.rs
src/helpers/: cache.rs  mod.rs  problem.rs
src/model/: account.rs  mod.rs  redacted.rs  session.rs
src/sql/: account.rs
