[package]
name = "warp-api-starter-template"
version = "0.1.0"
authors = ["Aslam Ahammed <aslamplr@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.31"
thiserror = "1.0.20"
clap = "3.0.0-beta.2"
dotenv = "0.15.0"
tracing = "0.1.15"
tracing-subscriber = "0.2.7"
serde = "1.0.114"
serde_json = "1.0.56"
bincode = "1.3.1"
shrinkwraprs = "0.3.0"
chrono = { version = "0.4.19", features = ["serde"] }
uuid = { version = "0.8.1", features = ["serde", "v4"] }
unicode-width = "0.1.8"
rand = "0.7.3"
futures = "0.3.5"
tokio = { version = "0.2.21", features = ["full"] }
warp = "0.2.3"
http-api-problem = { version = "0.17.0", features = ["with-warp"] }
biscuit = "0.5.0-beta1"
argonautica = "0.2.0"
sqlx = { version = "0.3.5", default-features = false, features = [ "runtime-tokio", "macros", "postgres", "uuid", "chrono", "json" ] }
redis = { version = "0.17.0", default-features = false, features = [ "tokio-rt-core" ]}
juniper = { git = "https://github.com/graphql-rust/juniper.git", rev = "4d77a1a9b9b0e60cbeb200527289bd45afec4141" }
juniper_subscriptions = { git = "https://github.com/graphql-rust/juniper.git", rev = "4d77a1a9b9b0e60cbeb200527289bd45afec4141" }
juniper_warp = { git = "https://github.com/graphql-rust/juniper.git", features = ["subscriptions"], rev = "4d77a1a9b9b0e60cbeb200527289bd45afec4141" }
hyper = "0.13.6"
listenfd = "0.3.3"
